// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > should render 1`] = `
<DocumentFragment>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</DocumentFragment>
`;

exports[`Divider > should render a dashed 1`] = `
<div>
  <div
    class="h-4 border-t border-dashed [background:none] clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal type 1`] = `
<div>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size default 1`] = `
<div>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size lg 1`] = `
<div>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size md 1`] = `
<div>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size sm 1`] = `
<div>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render horizontal with size xl 1`] = `
<div>
  <div
    class="h-4 border-t border-solid clear-both my-4 flex w-full min-w-full border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical type 1`] = `
<div>
  <div
    class="h-4 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size default 1`] = `
<div>
  <div
    class="h-4 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size lg 1`] = `
<div>
  <div
    class="h-8 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size md 1`] = `
<div>
  <div
    class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size sm 1`] = `
<div>
  <div
    class="h-2 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;

exports[`Divider > should render vertical with size xl 1`] = `
<div>
  <div
    class="h-10 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
  />
</div>
`;
